data/derived/comb/progs/unify/prog8248.ml.out
Characters 147-151:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list list
